--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 ansible==2.8.6
 asn1crypto==0.24.0
 bcrypt==3.1.7
-cffi=1.12.3
+cffi==1.12.3
 cryptography==2.7
 enum34==1.1.6
 idna==2.8
@@ -17,7 +17,74 @@ six==1.12.0
 
 ## Azure
 ansible[azure]
-#`pip install 'azure>=2.0.0' --upgrade`) - No module named 'msrestazure'
+# jinja2
+# PyYAML
+# cryptography
+# packaging
+# requests[security]
+azure-cli-core==2.0.35 #(from ansible[azure])
+azure-cli-nspkg==3.0.2 #(from ansible[azure])
+azure-common==1.1.11 #(from ansible[azure])
+azure-mgmt-authorization==0.51.1 #(from ansible[azure])
+azure-mgmt-batch==5.0.1 #(from ansible[azure])
+azure-mgmt-cdn==3.0.0 #(from ansible[azure])
+azure-mgmt-compute==4.4.0 #(from ansible[azure])
+azure-mgmt-containerinstance==1.4.0 #(from ansible[azure])
+azure-mgmt-containerregistry==2.0.0 #(from ansible[azure])
+azure-mgmt-containerservice==4.4.0 #(from ansible[azure])
+azure-mgmt-dns==2.1.0 #(from ansible[azure])
+azure-mgmt-keyvault==1.1.0 #(from ansible[azure])
+azure-mgmt-marketplaceordering==0.1.0 #(from ansible[azure])
+azure-mgmt-monitor==0.5.2 #(from ansible[azure])
+azure-mgmt-network==2.3.0 #(from ansible[azure])
+azure-mgmt-nspkg==2.0.0 #(from ansible[azure])
+azure-mgmt-redis==5.0.0 #(from ansible[azure])
+azure-mgmt-resource==2.1.0 #(from ansible[azure])
+azure-mgmt-rdbms==1.4.1 #(from ansible[azure])
+azure-mgmt-servicebus==0.5.3 #(from ansible[azure])
+azure-mgmt-sql==0.10.0 #(from ansible[azure])
+azure-mgmt-storage==3.1.0 #(from ansible[azure])
+azure-mgmt-trafficmanager==0.50.0 #(from ansible[azure])
+azure-mgmt-web==0.41.0 #(from ansible[azure])
+azure-nspkg==2.0.0 #(from ansible[azure])
+azure-storage==0.35.1 #(from ansible[azure])
+msrest==0.6.1 #(from ansible[azure])
+msrestazure==0.5.0 #(from ansible[azure])
+azure-keyvault==1.0.0a1 #(from ansible[azure])
+azure-graphrbac==0.40.0 #(from ansible[azure])
+azure-mgmt-cosmosdb==0.5.2 #(from ansible[azure])
+azure-mgmt-hdinsight==0.1.0 #(from ansible[azure])
+azure-mgmt-devtestlabs==3.0.0 #(from ansible[azure])
+azure-mgmt-loganalytics==0.2.0 #(from ansible[azure])
+# MarkupSafe>=0.23
+# cffi!=1.11.3,>=1.8
+# six>=1.4.1
+# asn1crypto>=0.21.0
+# pyparsing>=2.0.2
+# urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1
+# chardet<3.1.0,>=3.0.2
+# certifi>=2017.4.17
+# idna<2.9,>=2.5
+pyOpenSSL>=0.14; extra == "security" #(from requests[security]->ansible[azure])
+# jmespath==0.9.4
+tabulate<=0.8.2,>=0.7.7 #(from azure-cli-core==2.0.35->ansible[azure])
+knack==0.3.3 #(from azure-cli-core==2.0.35->ansible[azure])
+pygments #(from azure-cli-core==2.0.35->ansible[azure])
+# colorama>=0.3.9
+# wheel==0.30.0
+argcomplete>=1.8.0 ##(from azure-cli-core==2.0.35->ansible[azure])
+# paramiko==2.5.0
+humanfriendly>=4.7 ##(from azure-cli-core==2.0.35->ansible[azure])
+applicationinsights>=0.11.1 #(from azure-cli-core==2.0.35->ansible[azure])
+# PyJWT==1.7.1
+# python-dateutil==2.8.0
+# isodate>=0.6.0
+# requests-oauthlib>=0.5.0
+# adal<2.0.0,>=0.6.0
+# pycparser==2.19
+# pynacl>=1.0.1
+# bcrypt>=3.1.3
+# oauthlib>=3.0.0
 
 ## PaloAlto
 pan-python==0.15.0
