--- a/roles/azure_ip/tasks/main.yml
+++ b/roles/azure_ip/tasks/main.yml
@@ -6,6 +6,7 @@
   when:
     - action is defined 
     - action == 'list'
+    - (ips | default([], true) | length) > 0
   with_items: "{{ ips }}"
 
 - name: In ip address state
@@ -14,6 +15,7 @@
     ip: "{{ item }}"
   when:
     - action is undefined 
+    - (ips | default([], true) | length) > 0
   with_items: "{{ ips }}"
 
 - name: Update/create ip address
@@ -24,6 +26,7 @@
     - action is defined 
     - action == 'present'
     - item.state is undefined
+    - (ips | default([], true) | length) > 0
   with_items: "{{ ips }}"
 
 - name: Delete ip address
@@ -34,5 +37,6 @@
     - action is defined 
     - action == 'absent'
     - item.state is undefined
+    - (ips | default([], true) | length) > 0
   with_items: "{{ ips }}"
 ...
