--- a/roles/azure_lb/tasks/main.yml
+++ b/roles/azure_lb/tasks/main.yml
@@ -6,6 +6,7 @@
   when:
     - action is defined 
     - action == 'list'
+    - (lbs | default([], true) | length) > 0
   with_items: "{{ lbs }}"
 
 - name: In load balancer state
@@ -14,6 +15,7 @@
     lb: "{{ item }}"
   when:
     - action is undefined 
+    - (lbs | default([], true) | length) > 0
   with_items: "{{ lbs }}"
 
 - name: Update/create load balancer
@@ -24,6 +26,7 @@
     - action is defined 
     - action == 'present'
     - item.state is undefined
+    - (lbs | default([], true) | length) > 0
   with_items: "{{ lbs }}"
 
 - name: Delete load balancer
@@ -34,5 +37,6 @@
     - action is defined 
     - action == 'absent'
     - item.state is undefined
+    - (lbs | default([], true) | length) > 0
   with_items: "{{ lbs }}"
 ...
