--- a/roles/azure_nic/tasks/main.yml
+++ b/roles/azure_nic/tasks/main.yml
@@ -6,6 +6,7 @@
   when:
     - action is defined 
     - action == 'list'
+    - (nics | default([], true) | length) > 0
   with_items: "{{ nics }}"
 
 - name: In network interface state
@@ -14,6 +15,7 @@
     nic: "{{ item }}"
   when:
     - action is undefined 
+    - (nics | default([], true) | length) > 0
   with_items: "{{ nics }}"
 
 - name: Update/create network interface
@@ -24,6 +26,7 @@
     - action is defined 
     - action == 'present'
     - item.state is undefined
+    - (nics | default([], true) | length) > 0
   with_items: "{{ nics }}"
 
 - name: Delete network interface
@@ -34,5 +37,6 @@
     - action is defined 
     - action == 'absent'
     - item.state is undefined
+    - (nics | default([], true) | length) > 0
   with_items: "{{ nics }}"
 ...
