--- a/roles/azure_nsg/tasks/main.yml
+++ b/roles/azure_nsg/tasks/main.yml
@@ -6,6 +6,7 @@
   when:
     - action is defined 
     - action == 'list'
+    - (nsgs | default([], true) | length) > 0
   with_items: "{{ nsgs }}"
 
 - name: In security group state
@@ -14,6 +15,7 @@
     nsg: "{{ item }}"
   when:
     - action is undefined 
+    - (nsgs | default([], true) | length) > 0
   with_items: "{{ nsgs }}"
 
 - name: Update/create security group
@@ -24,6 +26,7 @@
     - action is defined 
     - action == 'present'
     - item.state is undefined
+    - (nsgs | default([], true) | length) > 0
   with_items: "{{ nsgs }}"
 
 - name: Delete security group
@@ -34,5 +37,6 @@
     - action is defined 
     - action == 'absent'
     - item.state is undefined
+    - (nsgs | default([], true) | length) > 0
   with_items: "{{ nsgs }}"
 ...
