--- a/roles/azure_route/tasks/main.yml
+++ b/roles/azure_route/tasks/main.yml
@@ -6,6 +6,7 @@
   when:
     - action is defined 
     - action == 'list'
+    - (routes | default([], true) | length) > 0
   with_items: "{{ routes }}"
 
 - name: In route table state
@@ -14,6 +15,7 @@
     route: "{{ item }}"
   when:
     - action is undefined 
+    - (routes | default([], true) | length) > 0
   with_items: "{{ routes }}"
 
 - name: Update/create route table
@@ -24,6 +26,7 @@
     - action is defined 
     - action == 'present'
     - item.state is undefined
+    - (routes | default([], true) | length) > 0
   with_items: "{{ routes }}"
 
 - name: Delete route table
@@ -34,5 +37,6 @@
     - action is defined 
     - action == 'absent'
     - item.state is undefined
+    - (routes | default([], true) | length) > 0
   with_items: "{{ routes }}"
 ...
