Set roles directory Apply config to avoid issue when 'require tty' is set in sudoers file.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -73,7 +73,7 @@ gather_subset = network,virtual
 inject_facts_as_vars = False
 
 # additional paths to search for roles in, colon separated
-#roles_path    = /etc/ansible/roles
+roles_path    = ./roles
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
@@ -409,8 +409,8 @@ control_path_dir = ./.ansible/cp
 # By default, this option is disabled to preserve compatibility with
 # sudoers configurations that have requiretty (the default on many distros).
 #
-#pipelining = False
-pipelining = True
+pipelining = False
+#pipelining = True
 
 # Control the mechanism for transferring files (old)
 #   * smart = try sftp and then try scp [default]
@@ -434,7 +434,7 @@ transfer_method = piped
 
 # The -tt argument is passed to ssh when pipelining is not enabled because sudo 
 # requires a tty by default. 
-#usetty = True
+usetty = True
 
 # Number of times to retry an SSH connection to a host, in case of UNREACHABLE.
 # For each retry attempt, there is an exponential backoff,
