--- a/infra.yml
+++ b/infra.yml
@@ -5,8 +5,11 @@
   gather_facts: no
   roles:
     - {role: azure_rg, tags: ["azure", "rg"]}
-    - {role: azure_vnet, tags: ["azure", "vnet"]}
     - {role: azure_law, tags: ["azure", "law"]}
+    - {role: azure_sentinel, tags: ["azure", "sentinel"]}
+#    - {role: azure_res, ress: [{name: sentinel, resource_group:
+#      "{{base_name}}-rg01", resource_type: "solutions" , provider: 'OperationsManagement'}], action: 'present', tags: ["azure", "rg"]}
+    - {role: azure_vnet, tags: ["azure", "vnet"]}
     - {role: azure_nsg, tags: ["azure", "nsg"]}
     - {role: azure_rt, tags: ["azure", "routetable"]}
     - {role: azure_route, action: 'list', tags: ["azure", "route"]}
