--- a/roles/azure_lb/tasks/present.yml
+++ b/roles/azure_lb/tasks/present.yml
@@ -2,14 +2,16 @@
 - set_fact:
     tags_list: "{{ tags_list | default([]) |
     union([[tag.key,tag.value]|join(':')]) }}"
-  loop: "{{ lookup('dict', lb.tags | default({})) }}"
+  loop: "{{ lookup('dict', lb.tags | default({}, true)) }}"
   loop_control:
     loop_var: "tag"
 
 - name: Get load balancer
   azure_rm_loadbalancer_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ lb.resource_group }}"
@@ -29,8 +31,10 @@
 
 - name: Create load balancer
   azure_rm_loadbalancer:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ lb.name }}"
@@ -39,6 +43,7 @@
     inbound_nat_pools: "{{ lb.inbound_nat_pools | default(omit, true) }}"
     inbound_nat_rules: "{{ lb.inbound_nat_rules | default(omit, true) }}"
     load_balancing_rules: "{{ lb.load_balancing_rules | default(omit, true) }}"
+    location: "{{ lb.location | default(omit, true) }}"
     probes: "{{ lb.probes }}"
     resource_group: "{{ lb.resource_group }}"
     sku: "{{ lb.sku | default('Standard', true) }}"
