--- a/roles/azure_res/tasks/absent.yml
+++ b/roles/azure_res/tasks/absent.yml
@@ -1,8 +1,10 @@
 ---
 - name: Get log analytics workspace
   azure_rm_resource_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ res.resource_group }}"
@@ -11,8 +13,10 @@
 
 - name: Delete log analytics workspace
   azure_rm_resource:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     provider: "{{ res.provider }}"
