--- a/roles/azure_sa/tasks/absent.yml
+++ b/roles/azure_sa/tasks/absent.yml
@@ -8,8 +8,10 @@
 
 - name: Get storage account
   azure_rm_storageaccount_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ sa.resource_group | default(omit) }}"
@@ -21,12 +23,14 @@
 
 - name: Delete storage account
   azure_rm_storageaccount:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ sa.name }}"
-    force_delete_nonempty: "{{ sa.access_tier | default(false, true) }}"
+    force_delete_nonempty: "{{ sa.force_delete_nonempty | default(false, true) }}"
     resource_group: "{{ sa.resource_group }}"
     state: "absent"
   register: deletedsa
