--- a/roles/azure_vmext/tasks/absent.yml
+++ b/roles/azure_vmext/tasks/absent.yml
@@ -1,8 +1,10 @@
 ---
 - name: Get virtual machine extension
   azure_rm_virtualmachineextension_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ vmext.resource_group }}"
@@ -14,8 +16,10 @@
 
 - name: Delete virtual machine extension
   azure_rm_virtualmachineextension:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ vmext.name }}"
