--- a/roles/azure_avs/tasks/present.yml
+++ b/roles/azure_avs/tasks/present.yml
@@ -2,14 +2,16 @@
 - set_fact:
     tags_list: "{{ tags_list | default([]) |
     union([[tag.key,tag.value]|join(':')]) }}"
-  loop: "{{ lookup('dict', avs.tags | default({})) }}"
+  loop: "{{ lookup('dict', avs.tags | default({}, true)) }}"
   loop_control:
     loop_var: "tag"
 
 - name: Get availability set
   azure_rm_availabilityset_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ avs.resource_group }}"
@@ -19,8 +21,10 @@
 
 - name: Create availability set
   azure_rm_availabilityset:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ avs.name }}"
