--- a/roles/azure_law/tasks/present.yml
+++ b/roles/azure_law/tasks/present.yml
@@ -2,14 +2,16 @@
 - set_fact:
     tags_list: "{{ tags_list | default([]) |
     union([[tag.key,tag.value]|join(':')]) }}"
-  loop: "{{ lookup('dict', law.tags | default({})) }}"
+  loop: "{{ lookup('dict', law.tags | default({}, true)) }}"
   loop_control:
     loop_var: "tag"
 
 - name: Get log analytics workspace
   azure_rm_loganalyticsworkspace_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ law.resource_group }}"
@@ -22,8 +24,10 @@
 
 - name: Create log analytics workspace
   azure_rm_loganalyticsworkspace:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ law.name }}"
