--- a/roles/azure_nic/tasks/present.yml
+++ b/roles/azure_nic/tasks/present.yml
@@ -2,14 +2,16 @@
 - set_fact:
     tags_list: "{{ tags_list | default([]) |
     union([[tag.key,tag.value]|join(':')]) }}"
-  loop: "{{ lookup('dict', nic.tags | default({})) }}"
+  loop: "{{ lookup('dict', nic.tags | default({}, true)) }}"
   loop_control:
     loop_var: "tag"
 
 - name: Get network interface
   azure_rm_networkinterface_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ nic.resource_group }}"
@@ -19,8 +21,10 @@
 
 - name: Create network interface
   azure_rm_networkinterface:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ nic.name }}"
@@ -31,6 +35,7 @@
     enable_ip_forwarding: "{{ nic.enable_ip_forwarding | default(true, true) }}"
     ip_configurations: "{{ nic.ip_configurations | default(omit, true) }}"
     append_tags: false
+    location: "{{ nic.location | default(omit, true) }}"
     resource_group: "{{ nic.resource_group }}"
     security_group: "{{ nic.security_group | default(omit, true) }}"
     subnet_name: "{{ nic.subnet_name }}"
