--- a/roles/azure_nsg/tasks/list.yml
+++ b/roles/azure_nsg/tasks/list.yml
@@ -8,8 +8,10 @@
 
 - name: Get security group
   azure_rm_securitygroup_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ nsg.resource_group }}"
