--- a/roles/azure_res/tasks/list.yml
+++ b/roles/azure_res/tasks/list.yml
@@ -1,8 +1,10 @@
 ---
 - name: Get resource
   azure_rm_resource_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ res.resource_group }}"
