--- a/roles/azure_sa/tasks/present.yml
+++ b/roles/azure_sa/tasks/present.yml
@@ -2,14 +2,16 @@
 - set_fact:
     tags_list: "{{ tags_list | default([]) |
     union([[tag.key,tag.value]|join(':')]) }}"
-  loop: "{{ lookup('dict', sa.tags) }}"
+  loop: "{{ lookup('dict', sa.tags | default({}, true)) }}"
   loop_control:
     loop_var: "tag"
 
 - name: Get storage account
   azure_rm_storageaccount_facts:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ sa.resource_group | default(omit) }}"
@@ -21,8 +23,10 @@
 
 - name: Create storage account
   azure_rm_storageaccount:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ sa.name }}"
@@ -32,6 +36,7 @@
     force_delete_nonempty: "{{ sa.force_delete_nonempty | default(false, true) }}"
     https_only: "{{ sa.https_only | default(true, true) }}"
     kind: "{{ sa.kind | default(omit, true) }}"
+    location: "{{ sa.location | default(omit, true) }}"
     resource_group: "{{ sa.resource_group }}"
     state: "present"
     tags: "{{ sa.tags | default(omit, true) }}"
