--- a/roles/azure_sentinel/tasks/present.yml
+++ b/roles/azure_sentinel/tasks/present.yml
@@ -1,4 +1,28 @@
 ---
+- name: Login to azure
+  command:
+    argv:
+      - "az"
+      - "login"
+      - "--service-principal"
+      - "-u"
+      - "{{ azure_client_id }}"
+      - "-p"
+      - "{{ azure_secret }}"
+      - "-t"
+      - "{{ azure_tenant }}"
+  delegate_to: localhost
+
+- name: Select subscription
+  command:
+    argv:
+      - "az"
+      - "account"
+      - "set"
+      - "-s"
+      - "{{ sentinel.law.subscriptionid }}"
+  delegate_to: localhost
+
 - name: List solution
   command:
     argv:
@@ -8,7 +32,7 @@
       - "--resource-type"
       - "Microsoft.OperationsManagement/solutions"
       - "--name"
-      - "{{ sentinel.name | default('', true) }}"
+      - "{{ sentinel.law.name | default('', true) }}"
   register: azure_sentinel_facts
   delegate_to: localhost
 
