--- a/roles/azure_subnet/tasks/absent.yml
+++ b/roles/azure_subnet/tasks/absent.yml
@@ -1,6 +1,9 @@
 ---
 - name: Get subnet
   azure_rm_subnet_facts:
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
+    subscription_id: "{{ azure_subscription_id | default(omit) }}"
     client_id: "{{ azure_client_id | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
@@ -13,8 +16,10 @@
 
 - name: Delete subnet
   azure_rm_subnet:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ subnet.name }}"
