--- a/roles/azure_vgw/tasks/absent.yml
+++ b/roles/azure_vgw/tasks/absent.yml
@@ -1,8 +1,10 @@
 ---
 - name: Delete virtual network gateway
   azure_rm_virtualnetworkgateway:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ vgw.name }}"
