--- a/roles/azure_vm/tasks/present.yml
+++ b/roles/azure_vm/tasks/present.yml
@@ -2,7 +2,7 @@
 - set_fact:
     tags_list: "{{ tags_list | default([]) |
     union([[tag.key,tag.value]|join(':')]) }}"
-  loop: "{{ lookup('dict', vm.tags | default({})) }}"
+  loop: "{{ lookup('dict', vm.tags | default({}, true)) }}"
   loop_control:
     loop_var: "tag"
 
@@ -10,8 +10,8 @@
   azure_rm_virtualmachine_facts:
     ad_user: "{{ azure_ad_user | default(omit) }}"
     password: "{{ azure_password | default(omit) }}"
-    client_id: "{{ azure_client_id | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     resource_group: "{{ vm.resource_group }}"
@@ -37,8 +37,8 @@
   azure_rm_virtualmachine:
     ad_user: "{{ azure_ad_user | default(omit) }}"
     password: "{{ azure_password | default(omit) }}"
-    client_id: "{{ azure_client_id | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ vm.name }}"
@@ -65,7 +65,7 @@
     started: "{{ vm.started | default(true, true) }}"
     storage_account_name: "{{ vm.storage_account_name | default(omit, true) }}"
     subnet_name: "{{ vm.subnet_name | default(omit, true) }}"
-    virtual_network: "{{ vm.virtual_network }}"
+    virtual_network: "{{ vm.virtual_network | default(omit, true) }}"
     vm_size: "{{ vm.vm_size | default('Standard_M8-2ms', true) }}"
     zones: "{{ vm.zone | default(omit, true) }}"
     append_tags: false
