--- a/roles/azure_vnet/tasks/absent.yml
+++ b/roles/azure_vnet/tasks/absent.yml
@@ -1,6 +1,9 @@
 ---
 - name: Get virtual network
   azure_rm_virtualnetwork_facts:
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
+    subscription_id: "{{ azure_subscription_id | default(omit) }}"
     client_id: "{{ azure_client_id | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
@@ -11,8 +14,10 @@
 
 - name: Delete virtual network
   azure_rm_virtualnetwork:
-    client_id: "{{ azure_client_id | default(omit) }}"
+    ad_user: "{{ azure_ad_user | default(omit) }}"
+    password: "{{ azure_password | default(omit) }}"
     subscription_id: "{{ azure_subscription_id | default(omit) }}"
+    client_id: "{{ azure_client_id | default(omit) }}"
     secret: "{{ azure_secret | default(omit) }}"
     tenant: "{{ azure_tenant | default(omit) }}"
     name: "{{ vnet.name }}"
