--- a/roles/known_hosts/tasks/main.yml
+++ b/roles/known_hosts/tasks/main.yml
@@ -1,4 +1,11 @@
 ---
+- name: Ensure ssh dir exist
+  file:
+    path: "~/.ssh"
+    state: directory
+    mode: 0750
+  delegate_to: localhost
+
 - name: Ensure known_hosts file exist
   copy:
     content: ""
