Add role to create virtual network peering.

--- a/infra.yml
+++ b/infra.yml
@@ -13,4 +13,5 @@
 - import_playbook: playbook_network_interface_card.yml
 - import_playbook: playbook_route.yml
 - import_playbook: playbook_virtual_machine.yml
+- import_playbook: playbook_peering.yml
 ...
