--- a/inventory/azure_rm.yml
+++ b/inventory/azure_rm.yml
@@ -1,6 +1,6 @@
 plugin: azure_rm
 auth_source: auto
-location: canadaeast,canadacentral,eastus,eastus2,westcentralus
+location: canadaeast,canadacentral,eastus
 cloud_environment: "AzureCloud"
 default_host_filters:
   - 'powerstate != "running"'
@@ -10,4 +10,6 @@ hostvar_expressions:
 keyed_groups:
   - prefix: azure
     key: tags.none | default('ec2')
+#  - prefix: azure
+#    key: tags.group | default('ec2')
 plain_host_names: yes
